--- a/app/src/main/res/layout/fragment_search_page.xml
+++ b/app/src/main/res/layout/fragment_search_page.xml
@@ -74,7 +74,7 @@
             android:layout_height="match_parent">
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/searchResultPoster"
                 android:layout_width="100dp"
                 android:layout_height="180dp"
                 android:layout_marginStart="8dp"
@@ -91,8 +91,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="@string/search_result_title_placeholder"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
-                app:layout_constraintTop_toTopOf="@+id/imageView3" />
+                app:layout_constraintStart_toEndOf="@+id/searchResultPoster"
+                app:layout_constraintTop_toTopOf="@+id/searchResultPoster" />
 
             <TextView
                 android:id="@+id/searchResultRating"
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:text="@string/search_result_rating_placeholder"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintStart_toEndOf="@+id/searchResultPoster"
                 app:layout_constraintTop_toBottomOf="@+id/searchResultTitle" />
 
             <TextView
@@ -113,7 +113,7 @@
                 android:text="@string/search_result_plot_placeholder"
                 app:layout_constraintBottom_toTopOf="@+id/linearLayout"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView3"
+                app:layout_constraintStart_toEndOf="@+id/searchResultPoster"
                 app:layout_constraintTop_toBottomOf="@+id/searchResultRating" />
 
             <LinearLayout
@@ -126,7 +126,7 @@
                 android:orientation="horizontal"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/imageView3">
+                app:layout_constraintStart_toEndOf="@+id/searchResultPoster">
 
                 <ImageView
                     android:id="@+id/searchResultFavourite"
