--- a/app/src/main/res/layout/fragment_search_page.xml
+++ b/app/src/main/res/layout/fragment_search_page.xml
@@ -125,10 +125,13 @@
             <TextView
                 android:id="@+id/searchResultPlot"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginBottom="8dp"
-                android:maxLength="275"
+                android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
+                android:ellipsize="end"
+                android:maxLength="280"
+                android:maxLines="6"
                 android:text="@string/search_result_plot_placeholder"
                 android:visibility="visible"
                 app:layout_constraintBottom_toTopOf="@+id/iconsLayout"
