--- a/app/src/main/res/layout/fragment_search_page.xml
+++ b/app/src/main/res/layout/fragment_search_page.xml
@@ -90,7 +90,7 @@
                 android:layout_height="180dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginBottom="8dp"
-                android:src="@drawable/poster_placeholder"
+                android:src="@drawable/noimagefound"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
