#22 Completed UpcomingPage RecyclerView Adapter

--- a/app/src/main/res/layout/upcoming_layout.xml
+++ b/app/src/main/res/layout/upcoming_layout.xml
@@ -34,7 +34,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/upcmoingPlot"
+                android:id="@+id/upcomingPlot"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
