--- a/app/src/main/res/layout/upcoming_layout.xml
+++ b/app/src/main/res/layout/upcoming_layout.xml
@@ -63,10 +63,12 @@
                 android:id="@+id/upcomingCalendar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 app:layout_constraintBottom_toTopOf="@+id/upcomingAddButton"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/upcomingReleaseDate"
                 app:srcCompat="@drawable/ic_date_range_black_24dp" />
 
             <ImageView
