--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -12,6 +12,11 @@
         android:title="@string/watch_list_page_title" />
 
     <item
+        android:id="@+id/navigation_theatres"
+        android:icon="@drawable/ic_theaters_black_24dp"
+        android:title="@string/theatres_page_title" />
+
+    <item
         android:id="@+id/navigation_search"
         android:icon="@drawable/ic_search_black_24dp"
         android:title="@string/search_page_title" />
