--- a/app/src/main/res/layout/theatre_view.xml
+++ b/app/src/main/res/layout/theatre_view.xml
@@ -56,7 +56,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/theatreAddress">
 
                 <ImageView
-                    android:id="@+id/theatrephone"
+                    android:id="@+id/theatrePhone"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
