#29 #28 Selecting an item on the map now highlights the item in the recyclerview and vice versa

--- a/app/src/main/res/layout/theatre_view.xml
+++ b/app/src/main/res/layout/theatre_view.xml
@@ -5,6 +5,7 @@
     android:layout_height="wrap_content">
 
     <android.support.v7.widget.CardView
+        android:id="@+id/theatreCard"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
