--- a/app/src/main/res/layout/fragment_theatres_page.xml
+++ b/app/src/main/res/layout/fragment_theatres_page.xml
@@ -29,5 +29,21 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/theatreMV" />
+        app:layout_constraintTop_toBottomOf="@+id/theatreMV" >
+
+    </android.support.v7.widget.RecyclerView>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/theatreFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginBottom="16dp"
+        android:clickable="true"
+        android:src="@drawable/ic_theaters_black_24dp"
+        app:backgroundTint="@color/colorPrimary"
+        app:fabSize="mini"
+        app:layout_constraintBottom_toTopOf="@+id/theatreRV"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:useCompatPadding="false" />
 </android.support.constraint.ConstraintLayout>
