#26 Data now clears when clear data is selected and pages refresh to reflect the clearing of the data

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -15,10 +15,10 @@
         android:summary="@string/save_location_description"
         android:title="@string/save_location_title" />
 
-    <Preference android:title="@string/clear_data"/>
-    <Preference android:title="@string/bug_report"/>
-    <Preference android:title="@string/request_feature"/>
-    <Preference android:title="@string/credits_title"/>
+    <Preference android:title="@string/clear_data" android:key="clear_data"/>
+    <Preference android:title="@string/bug_report" android:key="bug_report"/>
+    <Preference android:title="@string/request_feature" android:key="request_feature"/>
+    <Preference android:title="@string/credits_title" android:key="credits"/>
 
 
 
