#25 Completed Credits Page

--- a/app/src/main/res/menu/top_menu.xml
+++ b/app/src/main/res/menu/top_menu.xml
@@ -12,6 +12,12 @@
         android:id="@+id/menu_settings"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/settings_title"
-        app:showAsAction="ifRoom" />
+        app:showAsAction="never" />
+
+    <item
+        android:id="@+id/menu_credits"
+        android:icon="@drawable/ic_info_black_24dp"
+        android:title="@string/credits_title"
+        app:showAsAction="never" />
 
 </menu>
