--- a/app/src/main/res/layout/fragment_theatres_page.xml
+++ b/app/src/main/res/layout/fragment_theatres_page.xml
@@ -26,10 +26,11 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:layoutAnimation="@anim/recyclerview_animation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/theatreMV" >
+        app:layout_constraintTop_toBottomOf="@+id/theatreMV">
 
     </android.support.v7.widget.RecyclerView>
 
