--- a/app/src/main/res/layout/fragment_watch_list_page.xml
+++ b/app/src/main/res/layout/fragment_watch_list_page.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
+        android:layoutAnimation="@anim/recyclerview_animation"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
