--- a/app/src/main/res/layout/fragment_movie_pop_up.xml
+++ b/app/src/main/res/layout/fragment_movie_pop_up.xml
@@ -7,7 +7,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/backgroundColor">
 
 
         <ImageView
@@ -30,6 +31,7 @@
             android:layout_marginEnd="8dp"
             android:text="@string/search_result_title_placeholder"
             android:textAlignment="center"
+            android:textColor="@color/mainFontColor"
             android:textSize="@dimen/title_font_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +49,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/moviePopUpTitle"
+            app:srb_borderColor="@color/mainFontColor"
             app:srb_numberOfStars="5"
             app:srb_starSize="25dp"
             app:srb_stepSize="1" />
@@ -96,6 +99,7 @@
             android:layout_marginEnd="8dp"
             android:text="@string/search_result_actors_placeholder"
             android:textAlignment="center"
+            android:textColor="@color/mainFontColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/moviePopUpIconsLayout" />
@@ -109,6 +113,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="8dp"
             android:text="@string/search_result_plot_placeholder"
+            android:textColor="@color/mainFontColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
