--- a/app/src/main/res/layout/fragment_movie_pop_up.xml
+++ b/app/src/main/res/layout/fragment_movie_pop_up.xml
@@ -29,10 +29,11 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="@font/nunito"
             android:text="@string/search_result_title_placeholder"
             android:textAlignment="center"
             android:textColor="@color/mainFontColor"
-            android:textSize="@dimen/title_font_size"
+            android:textSize="30sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/moviePopUpPoster" />
@@ -97,9 +98,11 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
+            android:fontFamily="@font/raleway"
             android:text="@string/search_result_actors_placeholder"
             android:textAlignment="center"
             android:textColor="@color/mainFontColor"
+            android:textSize="@dimen/subtitle_font_size"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/moviePopUpIconsLayout" />
@@ -108,12 +111,14 @@
             android:id="@+id/moviePopUpPlot"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
-            android:layout_marginEnd="24dp"
+            android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
+            android:fontFamily="@font/titilliumweb"
             android:text="@string/search_result_plot_placeholder"
             android:textColor="@color/mainFontColor"
+            android:textSize="@dimen/content_font_size"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
