--- a/app/src/main/res/layout/theatre_view.xml
+++ b/app/src/main/res/layout/theatre_view.xml
@@ -29,8 +29,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/nunito"
                 android:text="@string/theatre_name_placeholder"
                 android:textColor="@color/mainFontColor"
+                android:textSize="@dimen/title_font_size"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -40,8 +42,10 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:fontFamily="@font/raleway"
                 android:text="@string/theatre_address_placeholder"
                 android:textColor="@color/mainFontColor"
+                android:textSize="@dimen/subtitle_font_size"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/theatreName" />
 
