--- a/app/src/main/res/layout/watch_list_text_view.xml
+++ b/app/src/main/res/layout/watch_list_text_view.xml
@@ -30,9 +30,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
+                android:fontFamily="@font/nunito"
                 android:text="@string/search_result_title_placeholder"
                 android:textAlignment="viewStart"
                 android:textColor="@color/mainFontColor"
+                android:textSize="@dimen/title_font_size"
                 android:visibility="visible"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/iconsLayout"
