#16 Fixed animations that were not working and added an additional setting options to hide watched movies

--- a/app/src/main/res/layout/upcoming_layout.xml
+++ b/app/src/main/res/layout/upcoming_layout.xml
@@ -26,14 +26,16 @@
 
             <TextView
                 android:id="@+id/upcomingTitle"
-                android:layout_width="wrap_content"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="8dp"
+                android:layout_marginEnd="8dp"
                 android:fontFamily="@font/nunito"
                 android:text="@string/search_result_title_placeholder"
                 android:textColor="@android:color/white"
                 android:textSize="@dimen/title_font_size"
+                app:layout_constraintEnd_toStartOf="@+id/upcomingReleaseDate"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
