--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -15,6 +15,12 @@
         android:summary="@string/save_location_description"
         android:title="@string/save_location_title" />
 
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="show_watched"
+        android:summary="@string/show_watched_description"
+        android:title="@string/show_watched_title" />
+
     <Preference android:title="@string/clear_data" android:key="clear_data"/>
     <Preference android:title="@string/bug_report" android:key="bug_report"/>
     <Preference android:title="@string/request_feature" android:key="request_feature"/>
