--- a/app/src/main/res/layout/fragment_movie_pop_up.xml
+++ b/app/src/main/res/layout/fragment_movie_pop_up.xml
@@ -55,6 +55,21 @@
             app:srb_starSize="25dp"
             app:srb_stepSize="1" />
 
+        <TextView
+            android:id="@+id/moviePopUpReleaseDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:fontFamily="@font/raleway"
+            android:text="Release Date"
+            android:textColor="@color/mainFontColor"
+            android:textSize="@dimen/subtitle_font_size"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/moviePopUpRating" />
+
         <LinearLayout
             android:id="@+id/moviePopUpIconsLayout"
             android:layout_width="0dp"
@@ -66,7 +81,7 @@
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/moviePopUpRating">
+            app:layout_constraintTop_toBottomOf="@+id/moviePopUpReleaseDate">
 
             <ImageView
                 android:id="@+id/moviePopUpFavourite"
