--- a/app/src/main/res/layout/fragment_movie_pop_up.xml
+++ b/app/src/main/res/layout/fragment_movie_pop_up.xml
@@ -45,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:clickable="false"
             android:isIndicator="true"
             android:visibility="visible"
             app:layout_constraintEnd_toEndOf="parent"
