--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -24,7 +24,7 @@
     <Preference android:title="@string/clear_data" android:key="clear_data"/>
     <Preference android:title="@string/bug_report" android:key="bug_report"/>
     <Preference android:title="@string/request_feature" android:key="request_feature"/>
-    <Preference android:title="@string/credits_title" android:key="credits"/>
+    <!--<Preference android:title="@string/credits_title" android:key="credits"/>-->
 
 
 
