#13 modified colour theme on search page

--- a/app/src/main/res/layout/fragment_search_page.xml
+++ b/app/src/main/res/layout/fragment_search_page.xml
@@ -73,6 +73,7 @@
         android:layout_marginBottom="8dp"
         android:minHeight="40dp"
         app:cardBackgroundColor="@color/backgroundColor"
+        app:cardCornerRadius="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -80,7 +81,7 @@
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/card_background"
+            android:background="@drawable/credit_background"
             android:minHeight="50dp">
 
             <ImageView
